Fixed spacing

--- a/main.css
+++ b/main.css
@@ -1,6 +1,11 @@
 * {
   font-family: 'Inconsolata', monospace;
   font-size: 1em;
+  margin: 0;
+}
+
+body {
+  margin: 0 0.5em;
 }
 
 code {
